--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,18 @@
 <header class="site-header">
-		<img class="logo" src="assets/images/TEDx_logo_place2_RGB_CS2-white.svg">
-		<div class="menu">
-			<ul class="menu-list">
-				<li>TEDxYouth@DMHS</li>
-				<li>Events</li>
-				<li>Staff</li>
-				<li>Speaker</li>
-			</ul>
+	<a href="/">
+		<img class="logo" src="/assets/images/TEDx_logo_place2_RGB_CS2-white.svg" />
+	</a>
+	<div class="menu">
+		<ul class="menu-list">
+			<li>
+				<a href="/about">About</a>
+			</li>
+			<li>Events</li>
+			<li>
+				<a href="/staff">Staff</a>
+			</li>
+			<li>Speaker</li>
+			<li>Blog</li>
+		</ul>
+	</div>
 </header>
