--- a/css/main.scss
+++ b/css/main.scss
@@ -29,25 +29,55 @@ $on-laptop:        800px;
 	font-family: Helvetica, Arial, sans-serif;
 }
 
+a,a:hover {
+	text-decoration: none;
+	color: #FFF;
+}
+
 .logo {
 	width: 300px;
 	margin: 15px 0 0 15px;
 }
 
+span.staff {
+	display: block;
+}
+
+.name {
+	
+}
+
+span.staff:first-child{
+	margin: 10px;
+	
+}
+
+ul.staff-list {
+  margin: 0 auto;
+  text-align: center;
+	list-style-type: none;
+}
+
+li.staff {
+  display: inline-block;
+  vertical-align: top;
+	
+}
+
 .wrapper {
-	width: 750px;
+	width: 1050px;
 	margin: auto;
 }
 
 .site-header {
-	width: 750px;
+	width: 1050px;
 	margin: auto;
 }
 
 .menu-list {
 	list-style-type: none;
 	padding: 0;
-	background-color: #7f8c8d;
+	background-color: #9e9e9e;
 	color: #FFF;
 	padding: 20px;
 }
@@ -55,6 +85,32 @@ $on-laptop:        800px;
 .menu-list li {
 	display: inline;
 	margin: 0 10px;
+	padding: 10px;
+}
+
+.menu-list li:hover {
+	background-color:  #f44336;
+}
+
+.under-construction {
+	margin: auto;
+}
+
+.staff-image {
+	margin-top: 5px;
+}
+
+.big-picture {
+	width: 100%;
+	height: 340px;
+	background-color: #424242;
+	
+}
+
+footer {
+	width: 1050px;
+	text-align: center;
+	margin: auto;
 }
 
 // Using media queries with like this:
