디자인 몇몇 변경

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,18 +1,16 @@
 <header class="site-header">
 	<a href="/">
-		<img class="logo" src="/assets/images/TEDx_logo_place2_RGB_CS2-white.svg" />
+		<img class="logo" src="/assets/images/TEDxLogo-long.svg" />
 	</a>
-	<div class="menu">
-		<ul class="menu-list">
-			<li>
-				<a href="/about">About</a>
-			</li>
-			<li>Events</li>
-			<li>
-				<a href="/staff">Staff</a>
-			</li>
-			<li>Speaker</li>
-			<li>Blog</li>
-		</ul>
-	</div>
+	<ul class="menu-list">
+		<li>
+			<a href="/about">이벤트에 관하여</a>
+		</li>
+		<li>이벤트들</li>
+		<li>
+			<a href="/staff">스태프</a>
+		</li>
+		<li>연사</li>
+		<li>블로그</li>
+	</ul>
 </header>
