--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,11 +6,17 @@
 		<li>
 			<a href="/about">이벤트에 관하여</a>
 		</li>
-		<li>이벤트들</li>
+		<li>
+			<a href="#">이벤트들</a>
+		</li>
 		<li>
 			<a href="/staff">스태프</a>
 		</li>
-		<li>연사</li>
-		<li>블로그</li>
+		<li>
+			<a href="#">스폰서</a>
+		</li>
+		<li>
+			<a href="#">블로그</a>
+		</li>
 	</ul>
 </header>
