--- a/css/main.scss
+++ b/css/main.scss
@@ -28,7 +28,7 @@ $on-palm:          600px;
 $on-laptop:        800px;
 
 * {
-	font-family: Helvetica, Arial, sans-serif;
+	font-family: "AppleSDGothicNeo","AppleSDNeoGothic","맑은 고딕","Malgun Gotihc", Helvetica, Arial, sans-serif;
 }
 
 header.site-header {
