--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,7 +13,7 @@
 			<a href="/staff">스태프</a>
 		</li>
 		<li>
-			<a href="#">스폰서</a>
+			<a href="/sponsors">스폰서</a>
 		</li>
 		<li>
 			<a href="#">블로그</a>
