학교 정보 추가 및 <hr> 스타일링

--- a/css/main.scss
+++ b/css/main.scss
@@ -103,6 +103,14 @@ li.staff {
 	margin: auto;
 }
 
+hr {
+  background: transparent url("/assets/images/dirty-shade.png") repeat-x 0 0;
+  border: 0 none;
+  color: #cccccc;
+  height: 4px;
+  padding: 0; 
+}
+
 .menu {
 	display: inline;
 }
