--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,3 @@
 <footer>
-	<p>This independent TEDx event is operated under license from TED</p>
+	<p>This independent TEDx event is operated under license from TED - Contact organizer hoseong.son@tedxyouthdmhs.com</p>
 </footer>
