행간 예쁘게 수정

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -16,6 +16,9 @@
 			<a href="/sponsors">스폰서</a>
 		</li>
 		<li>
+			<a href="/contact">연락</a>
+		</li>
+		<li>
 			<a href="#">블로그</a>
 		</li>
 	</ul>
