폰에서 어색한 레이아웃 수정

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,6 +2,7 @@
 	<a href="/">
 		<img class="logo" src="/assets/images/TEDxLogo-long.svg" />
 	</a>
+	<div class="menu">
 	<ul class="menu-list">
 		<li>
 			<a href="/about">이벤트에 관하여</a>
@@ -22,4 +23,5 @@
 			<a href="#">블로그</a>
 		</li>
 	</ul>
+</div>
 </header>
