연사 정보 추가

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,10 +5,10 @@
 	<div class="menu">
 	<ul class="menu-list">
 		<li>
-			<a href="/about">이벤트에 관하여</a>
+			<a href="/about">TEDxYouth@DMHS에 대해서</a>
 		</li>
 		<li>
-			<a href="#">이벤트들</a>
+			<a href="/event">행사 정보</a>
 		</li>
 		<li>
 			<a href="/staff">스태프</a>
